src/test/ui/issues/20000-29999/issue-29184.stderr
error[E0516]: `typeof` is a reserved keyword but unimplemented
  --> $DIR/issue-29184.rs:2:12
   |
LL |     let x: typeof(92) = 92;
   |            ^^^^^^^^^^ reserved keyword

error: aborting due to previous error

For more information about this error, try `rustc --explain E0516`.
